# fl-thesis2025v

./: README.md  pyproject.toml
context_data/: ckks.context
thesis_app/: FedAvgEnc.py  __init__.py  client_app.py  client_app2.py  comunication_utils.py  create_enc_context_CKKS.py  create_enc_context_TwoPack.py  my_strategy.py  server_app.py  task.py
thesis_app/context_data/: bfv.context  ckks.context
