[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thesis-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "antonio"

[tool.flwr.app.components]
serverapp = "thesis_app.server_app:app"
clientapp = "thesis_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 0.1
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
